--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   },
   "dependencies": {
     "debug": "^2.2.0",
-    "pinkie-promise": "^2.0.0",
     "prompt": "^1.0.0",
     "yargs": "^4.2.0"
+  },
+  "devDependencies": {
+    "mocha": "^2.4.5"
   }
 }
