--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "debug": "^2.2.0",
+    "keytar": "^3.0.0",
     "prompt-sync": "^4.0.4",
     "yargs": "^4.2.0"
   },
