--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   ],
   "dependencies": {
     "debug": "^2.2.0",
-    "keytar": "^3.0.0",
     "lodash.assign": "^4.0.6",
     "prompt-sync": "^4.0.4",
+    "read-pkg": "^1.1.0",
+    "semver": "^5.1.0",
     "yargs": "^4.2.0"
   },
   "devDependencies": {
