--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
   "dependencies": {
     "debug": "^2.2.0",
     "lodash.assign": "^4.0.6",
-    "pkg-up": "^1.0.0",
     "prompt-sync": "^4.0.4",
-    "semver": "^5.1.0",
-    "yargs": "^4.2.0"
+    "yargs": "^4.2.0",
+    "check-dep": "orangemug/check-dep#v0.1.1"
   },
   "devDependencies": {
     "mocha": "^2.4.5"
